27/12/23:
-Banding fixed on GI
-GI voxel grid updates smoothly with camera movement

25/12/23:
-Significant performance improvements for VCT with mipmap compute shader

24/12/23:
-Voxel cone traced GI rough implementation

21/12/23:
-Audio component looping
-Script changes/compilation time optimization
-More script utilities
-General bugfixes
-Editor layer structure changes (no longer owns scene)

18/12/23:
-Support for flexible and performant GPU particle systems using ParticleBufferComponents with layer integration
-Dynamic particle emission from shaders using append buffer with EmitParticleDirect/Append functions

11/12/23:
-Fixed prefabs not serializing children
-Fixed collision callbacks
-Scene graph entity node drag multi-selection with middle mouse
-Fixed undo/redo not accounting for child entities
-Fixed RemoveInstance not dequeueing duplicate instances flagged for update
-Fixed PathEqualTo

10/2/23:
-Mesh transform buffer bug where transforms would get skipped fixed
-Shadow acne fix on spotlights
-Fixed billboard lighting/normal mapping
-Fixed material previews
-Fixed meshinstancegroup bug where instances would not be dequeued from updating after being removed
-Fixed alpha-tested materials' previews not rendering correctly due to transparency composite shader not accounting for different texture sizes

7/12//23:
-More particle parameters - acceleration, scale/colour/opacity over time
-Animated spritesheet/flipbook support on materials
-Interpolation graphs that work on CPU and GPU

5/12/23:
-Billboards supported for particle emitters
-Rewrote auto-instancing system to be a bit more general and use new buffer classes
-General refactoring

3/12/23:
-Particle emitter serialization
-More parameters for particle emitters, custom mesh/material support
-Particle transform memory optimizations (switched to quats for rotation)
-Random rotations for particles

1/12/23:
-Better random velocity vector generation for particles using IQ's random function