@@ -1,3 +1,6 @@
+29/12/23:
+-Refactoring AssetManagerWindow
+
 27/12/23:
 -Banding fixed on GI
 -GI voxel grid updates smoothly with camera movement
